- Fixed bug #53141 (autoload misbehaves if called from closing session)   patch by: ladislav at marek dot su